--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,10 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
+<h3>Actions</h3>
 <p><%= link_to "delete", article_path(@article), method: :delete,
         data: {confirm: "Really delete the article?"}%></p>
 <p><%= link_to "edit", edit_article_path(@article) %></p>
 <p><%= link_to "<< Back to Articles List", articles_path %></p>
+<h3>Comments</h3>
+<%= render partial: 'articles/comment', collection: @article.comments %>
+
